Added zstd compression, improved cli logic, added more metadata for the files, fixes here and there

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.28)
-project(OrgEngine_FilePack)
+cmake_minimum_required(VERSION 3.10)
+project(orgfileformat)
 
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(OrgEngine_FilePack main.cpp)
-if (MSVC)
-    target_compile_options(OrgEngine_FilePack PRIVATE
-            $<$<CONFIG:Release>:/O2 /DNDEBUG /Ot>
-    )
-endif()
+add_subdirectory(3rdParty/zstd/build/cmake)
+
+add_executable(orgfileformat main.cpp)
+
+target_link_libraries(orgfileformat PRIVATE libzstd_static)
